--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -32,7 +32,7 @@
           </div>
           <div class="mb-3">
             <label for="email" class="form-label">이메일 주소</label>
-            <input type="email" class="form-control form-control-lg" id="email" th:field="*{email}" required placeholder="example@email.com" />
+            <input type="email" class="form-control form-control-lg" id="email" th:field="*{email}" required placeholder="example@hansung.ac.kr" />
           </div>
           <div class="mb-4">
             <label for="password" class="form-label">비밀번호</label>
